fix midi playback on iOS (no spaces in appname allowed 😫)

--- a/app_v2/songbook-app/src/theme/rondo.scss
+++ b/app_v2/songbook-app/src/theme/rondo.scss
@@ -206,6 +206,14 @@ page-song {
   }
 }
 
+.platform-android {
+  page-song {
+    .scroll-content {
+      padding-top: 56px !important;
+    }
+  }
+}
+
 .browser-link {
   padding: 12px 0;
 }
